Change opacity of floating class to 1 and set z-index

--- a/style.css
+++ b/style.css
@@ -71,7 +71,8 @@ h1 {
 .floating {
     position: absolute;
     pointer-events: none;
-    opacity: 0;
+    opacity: 1;
+    z-index: 1;
 }
 
 @keyframes gradientBG {
